Основной сервис. Вызов сервиса статистиики